# newsletter-generator

./: .gitignore  LICENSE  README.md  example.md  newsletter-2025-12.md  newsletter.py  pyproject.toml  requirements.txt  test_headers.py
distribution/: send.py
output/: newsletter-2025-12.html
tests/: test_integration.py  test_newsletter.py
