[project]
name = "newsletter-generator"
version = "1.0.0"
description = "Convert Markdown newsletters to email-safe HTML with OpenGraph link previews"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Philipp Dubach", email = "me@philippdubach.com"}
]
keywords = [
    "newsletter",
    "markdown",
    "email",
    "html",
    "opengraph",
    "link-preview"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/philippdubach/newsletter-generator"
Repository = "https://github.com/philippdubach/newsletter-generator"
Issues = "https://github.com/philippdubach/newsletter-generator/issues"

[project.scripts]
newsletter = "newsletter:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
